# TanoEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/Tano/: Core.hpp  EntityComponentSystem.hpp  Scene.hpp  Utils.hpp
src/: CMakeLists.txt  main.cpp
src/core/: Engine.cpp  Engine.hpp  WindowManager.cpp  WindowManager.hpp
src/ecs/: ComponentContainer.hpp  ECS.cpp  ECS.hpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp
src/ecs/components/: CollideComponent.hpp  TransformComponent.hpp
src/scene/: Scene.cpp  Scene.hpp
src/utils/: Debug.cpp  Debug.hpp  Logging.cpp  Logging.hpp
tests/: CMakeLists.txt  TestGame.cpp  TestGame.hpp  TestScene.cpp  TestScene.hpp  main.cpp
